2008-12-06  Andras Varga

	* fixed #16: reimplemented filtering. Now I store the log messages 
	in the memory myself, and on closing the filter dialog I re-fill 
	the text widget with manually filtered contents. This fixes strange 
	scrolling behavior (bug #17) as well. New files: logbuffer.cc/h

	* New feature: when you open a per-module output window, it comes up 
	containing previous messages (and not empty as it used to). This 
	feature was made possible by storing the log.

2008-11-27  Andras Varga

	* implemented font selection (Options dialog)

	* settings are now saved to $HOME/.tkenvrc, only inspectors are saved
	to .tkenvrc in the current directory. (Motivation: font selection is
	tyically meant to be global by the user, not per-simulation)

2008-11-26  Andras Varga

	* library renamed to opptkenv

2008-11-26  Andras Varga

	* Fix: opening the "General" treenode in a cGate inspector caused a
	Tcl error [reported by Ingmar Baumgart]

2008-10-18  Andras Varga

	* implemented module output window filtering: modules can be selected
	using a checkbox tree dialog. Bound to Ctrl+H.

	* implemented "Run until message", both in the Run Until dialog and
	in message objects' context menu

	* event banner text revised, plus now includes message name and class
	as well; added "Short event banners" checkbox to options dialog

	* fixed popup menu behaviour on linux (use tk_popup instead of post)

2008-05-17  Andras Varga

	* better toolbar icons
	* implemented show/hide arrowheads
	* implemented increase/decrease icon size
	* expanded context menu in graphical module inspectors
	* added corresponding keyboards shortcuts

2008-04-19  Andras Varga

	* layouting process can now be stopped if it takes too long

2008-03-29  Andras Varga

	* Implemented context menu for text windows. Includes Word wrap on/off,
	and Select all (Ctrl+A) features

2008-03-21  Andras Varga

	Fixed a number of issues with the Aqua-based Tcl/Tk on Mac OS/X: